--- a/oneroster-config/connector-oneroster.yml
+++ b/oneroster-config/connector-oneroster.yml
@@ -4,45 +4,45 @@
 
 ############# Clever test information #############
 
-connection:
-  platform: 'clever'
-
-  host: 'https://api.clever.com/v2.1/'
-
-  access_token: 'TEST_TOKEN'
-  page_size: 3000
-  max_user_count: 0
-
-schema:
-  match_groups_by: 'name'
-  key_identifier: 'id'
-  all_users_filter: 'users'
-  default_group_filter: 'sections'
-  default_user_filter: 'students'
-#  include_only:
-#    status: 'active'
+#connection:
+#  platform: 'clever'
+#
+#  host: 'https://api.clever.com/v2.1/'
+#
+#  access_token: 'TEST_TOKEN'
+#  page_size: 3000
+#  max_user_count: 0
+#
+#schema:
+#  match_groups_by: 'name'
+#  key_identifier: 'id'
+#  all_users_filter: 'users'
+#  default_group_filter: 'sections'
+#  default_user_filter: 'students'
+##  include_only:
+##    status: 'active'
 
 ######################################################
 
 
 ############# Classlink test information #############
 
-#connection:
-#  platform: 'classlink'
-#  client_id: '0fc7e35773c1fffd32579507'
-#  client_secret: '10332e330b2e364020179021'
-#  host: "https://adobe-ca-v2.oneroster.com/ims/oneroster/v1p1/"
-#  page_size: 3000
-#  max_user_count: 0
-#
-#schema:
-#  match_groups_by: 'title'
-#  key_identifier: 'sourcedId'
-#  all_users_filter: 'users'
-#  default_group_filter: 'classes'
-#  default_user_filter: 'students'
-#  include_only:
-#    status: 'active'
+connection:
+  platform: 'classlink'
+  client_id: '0fc7e35773c1fffd32579507'
+  client_secret: '10332e330b2e364020179021'
+  host: "https://adobe-ca-v2.oneroster.com/ims/oneroster/v1p1/"
+  page_size: 3000
+  max_user_count: 10
+
+schema:
+  match_groups_by: ['title','name']
+  key_identifier: 'sourcedId'
+  all_users_filter: 'users'
+  default_group_filter: 'classes'
+  default_user_filter: 'students'
+  include_only:
+    status: 'active'
 
 ######################################################
 
