--- a/oneroster-config/test/connector-oneroster.yml
+++ b/oneroster-config/test/connector-oneroster.yml
@@ -56,12 +56,12 @@ connection:
   platform: 'classlink'
   client_id: '0fc7e35773c1fffd32579507'
   client_secret: '10332e330b2e364020179021'
-  host: "https://BAD/"
-  page_size: 3000
-  max_user_count: 10
+  host: "https://adobe-ca-v2.oneroster.com/ims/oneroster/v1p1/"
+  page_size: 0
+  max_user_count: 250
 
 schema:
-  match_groups_by: ['title','name']
+  match_groups_by: ['title','name', 'sourcedId', ]
   key_identifier: 'sourcedId'
   all_users_filter: 'users'
   default_group_filter: 'classes'
