updates for new oneroster constructor

--- a/oneroster-config/test/user-sync-config.yml
+++ b/oneroster-config/test/user-sync-config.yml
@@ -166,39 +166,39 @@ directory_users:
   # --process-groups command-line argument.
   groups:
 
-#    - directory_group: schools::Pineapple Elementary School:students
-#      adobe_groups:
-#        - Wizardry
-  #
-  #    - directory_group: sections::Latin Dance Elective - Gleichner - 6::students
-  #      adobe_groups:
-  #      - Black Magic
-
-  #    - directory_group: courses::English, Class 602::students
-  #      adobe_groups:
-  #      - Wizardry
-  #
-  #    - directory_group: courses::Drama Elective::users
-  #      adobe_groups:
-  #      - Wizardry
-
-
-
-############# Classlink test information ###############
-
-    - directory_group: "ELA 6 (6A ELA)"
+    - directory_group: schools::Pineapple Elementary School::students
       adobe_groups:
-        - "Caves and Embers"
+        - Wizardry
 
-    - directory_group: "courses::Algebra 2::students"
+    - directory_group: sections::Latin Dance Elective - Gleichner - 6::students
       adobe_groups:
-        - "Caves and Embers"
+        - Black Magic
 
-    - directory_group: "schools::ClassLink HS::students"
+    - directory_group: courses::English, Class 602::students
       adobe_groups:
-        - "Caves and Embers"
+        - Wizardry
 
-#####################################################
+    - directory_group: courses::Drama Elective::users
+      adobe_groups:
+        - Wizardry
+
+
+
+  ############# Classlink test information ###############
+
+#      - directory_group: "ELA 6 (6A ELA)"
+#        adobe_groups:
+#          - "Wizardry"
+#
+#      - directory_group: "courses::2_1858::students"
+#        adobe_groups:
+#          - "Wizardry"
+#
+#      - directory_group: "schools::ClassLink HS::students"
+#        adobe_groups:
+#          - "Wizardry"
+
+  #####################################################
 
   # the value of this setting is a mapping whose keys are single enterprise
   # directory groups and whose values are lists of Adobe groups.  This mapping
@@ -362,7 +362,7 @@ invocation_defaults:
   # For argument --process-groups, the default is False (don't process).
   # If you set this default to True, you can supply the argument
   # --no-process-groups to override the default.
-  process_groups: No
+  process_groups: Yes
   # For argument --strategy, the default is 'sync'.
   strategy: sync
   # For argument --test-mode (or -t), the default is False (live run).
