--- a/oneroster-config/test/connector-oneroster.yml
+++ b/oneroster-config/test/connector-oneroster.yml
@@ -30,48 +30,46 @@
 
 ############# Clever Example ##########################
 
-#connection:
-#    platform: clever
-#    access_token: TEST_TOKEN              # TEST_TOKEN is provided by Clever for sample date -- Try it out!
-#    host: https://api.clever.com/v2.1/    # Host doesn't change for Clever, unless you need a different API version
-#    page_size: 1000
-#    max_user_count: 0
-#
-#schema:
-#    match_groups_by: name                 # Name is a good default for Clever
-#    key_identifier: id                   # Clever uses 'id' instead of 'sourcedId'
-#    all_users_filter: users
-#    default_group_filter: sections        # Sections means classes
-#    default_user_filter: students
-#    group_delimiter: '::'
-#    include_only:
-#      grade: Kindergarten
+connection:
+    platform: clever
+    access_token: TEST_TOKEN              # TEST_TOKEN is provided by Clever for sample date -- Try it out!
+    host: https://api.clever.com/v2.1/    # Host doesn't change for Clever, unless you need a different API version
+    page_size: 1000
+    max_users: 0
 
-
+schema:
+    match_groups_by: name                 # Name is a good default for Clever
+    key_identifier: id                   # Clever uses 'id' instead of 'sourcedId'
+    all_users_filter: users
+    default_group_filter: sections        # Sections means classes#  platform: 'classlink'
+    default_user_filter: students
+    group_delimiter: '::'
+user_email_format: '{familyName}.{givenName}@bonesofether.com'
 
 
 ############# Classlink test information #############
 
-connection:
-  platform: 'classlink'
-  client_id: '0fc7e35773c1fffd32579507'
-  client_secret: '10332e330b2e364020179021'
-  host: "https://adobe-ca-v2.oneroster.com/ims/oneroster/v1p1/"
-  page_size: 0
-  max_user_count: 250
-
-schema:
-  match_groups_by: ['title','name', 'sourcedId', ]
-  key_identifier: 'sourcedId'
-  all_users_filter: 'users'
-  default_group_filter: 'classes'
-  default_user_filter: 'students'
+#connection:
+#  platform: classlink
+#  client_id: '0fc7e35773c1fffd32579507'
+#  client_secret: '10332e330b2e364020179021'
+#  host: "https://adobe-ca-v2.oneroster.com/ims/oneroster/v1p1/"
+#  page_size: 0
+#  max_users: 250
+#
+#schema:
+#  match_groups_by: ['title','name', 'sourcedId', ]
+#  key_identifier: 'sourcedId'
+#  all_users_filter: 'users'
+#  default_group_filter: 'classes'
+#  default_user_filter: 'students'
+#  group_delimiter: '::'
 #  include_only:
 #    status: 'active'
+#user_email_format: '{sourcedId}@bonesofether.com'
 
 
-# user_email_format: '{familyName}.{givenName}@bonesofether.com'
-user_email_format: '{sourcedId}@bonesofether.com'
+
 
 
 # Optional attribute fields with defaults (uncomment to use)
