--- a/oneroster-config/test/extension-config.yml
+++ b/oneroster-config/test/extension-config.yml
@@ -15,36 +15,10 @@
 # in the source_attributes dictionary in your after_mapping_hook.  Any
 # of these attributes which don't have a value in the directory entry for
 # a given user will have a Python None value in that user's dictionary.
-extended_attributes:
-  - grade
 
-# (optional) extended_adobe_groups (default value is an empty list)
-# extended_adobe_groups is a list of Adobe-side product configuration
-# and/or user group names, exactly like those found in the groups
-# setting in the main configuration file.  Your after_mapping_hook
-# can add users to any product configuration or user group found here
-# as well as any found in the groups setting, and the effect of the
-# --process-groups argument will treat them exactly as if the
-# extended mapping had been specified as part of the groups setting.
+extended_attributes: []
 extended_adobe_groups: []
-# (required) after_mapping_hook
-# This is where you specify your Python hook code.  Note the vertical bar
-# after the after_mapping_hook label: this vertical bar is required and
-# denotes that all the following indented lines up to the next blank
-# line are part of a code block.  Do not have blank lines in your code block.
-#
-# after_mapping_hook code executes in a scope containing the following variables:
-#
-#     source_attributes   # in: attributes retrieved from customer directory system (eg 'c', 'givenName')
-#                         # out: N/A
-#     source_groups       # in: customer-side directory groups found for user
-#                         # out: N/A
-#     target_attributes   # in: user's attributes for UMAPI calls as defined by usual rules (eg 'country', 'firstname')
-#                         # out: user's attributes for UMAPI calls as potentially changed by hook code
-#     target_groups       # in: Adobe-side dashboard groups mapped for user by usual rules
-#                         # out: Adobe-side dashboard groups as potentially changed by hook code
-#     hook_storage        # for exclusive use by hook code: initialized to None; persists across per-user calls
-#     logger              # an object of type logging.logger which outputs to the console and/or file log
-#
 after_mapping_hook: |
-  print("grade: " + source_attributes['grade'])
+  import logging
+  logger = logging.getLogger('ext')
+  logger.info(str(sorted(source_groups)) + " " + str(sorted(target_groups)))
