--- a/examples/config files - basic/connector-oneroster.yml
+++ b/examples/config files - basic/connector-oneroster.yml
@@ -35,7 +35,7 @@ connection:
   access_token: 'TEST_TOKEN'              # TEST_TOKEN is provided by Clever for sample date -- Try it out!
   host: 'https://api.clever.com/v2.1/'    # Host doesn't change for Clever, unless you need a different API version
   page_size: 1000
-  max_user_count: 0
+  max_users: 0
 
 schema:
   match_groups_by: 'name'                 # Name is a good default for Clever
@@ -55,7 +55,7 @@ schema:
 #  client_secret: 'client secret here'
 #  host: "https://example.oneroster.com/ims/oneroster/v1p1/"    # You WILL need to update this to your URL
 #  page_size: 1000
-#  max_user_count: 0
+#  max_users: 0
 #
 #schema:
 #  match_groups_by: 'title'                # For Classlink, 'title' works for class/course.  Use 'name' for schools
@@ -63,6 +63,7 @@ schema:
 #  all_users_filter: 'users'
 #  default_group_filter: 'classes'
 #  default_user_filter: 'students'
+#  group_delimiter: '::'
 #  include_only:
 #    status: 'active'
 
@@ -97,7 +98,7 @@ schema:
 # client_secret          |  client secret - optional for Clever if token specified
 # access_token           |  Clever access token.  Use instead of id and secret.  This field has no effect on Classlink.
 # page_size              |  api call page size.  Default is 1000.  Bigger = faster!
-# max_user_count         |  api calls will cutoff after this many users. Set to 0 by default for unlimited.
+# max_users         |  api calls will cutoff after this many users. Set to 0 by default for unlimited.
 #                        |  useful when doing test runs to avoid pulling very large user counts.  results tend to be
 #                        |  in random orders, so do not count on this for expected values
 
@@ -182,6 +183,11 @@ schema:
 # If you need to, you can also override the default '::' delimiter (for example, if :: appears in your
 # group name).  To do this, set the group_delimiter option as described above.
 
+### Overriding the default (::) delimiter
+# If you need to, you can also override the default '::' delimiter (for example, if :: appears in your group name).
+# To do this, set the group_delimiter option in the schema section of connector-oneroster.yml, e.g.:
+# schema:
+#        group_delimiter: '###'
 
 ######  Inclusion filter ######
 
