--- a/examples/config files - basic/user-sync-config.yml
+++ b/examples/config files - basic/user-sync-config.yml
@@ -222,7 +222,7 @@ directory_users:
 #    - sign_sync
 #
 #  connectors:
-#    sign_sync: connector-sign-sync.yml
+#    sign_sync: connector-sign.yml
 
 # The limits section provides processing limits which can help ensure that
 # User Sync jobs do not exceed expected guardrails in their operation
